[CG] ImageBufferData::getData has an invariant comparison in the inner part of a loop which doesn't get optimized out https://bugs.webkit.org/show_bug.cgi?id=68588 <rdar://problem/10164955>

Reviewed by Simon Fraser.

Factor the unmultiplied check out of the inner loop, resulting in a
speed bump in ImageBufferData::getData.

No new tests, performance improvement.

* platform/graphics/cg/ImageBufferDataCG.cpp:
(WebCore::ImageBufferData::getData):


Canonical link: https://commits.webkit.org/84539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95695 268f45cc-cd09-0410-ab3c-d52691b4dbfc